// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mon-TopInfo Component should match snapshot 1`] = `
<div
  className="m_top"
>
  <img
    src="/users/24/avatar.jpg"
  />
  <div
    className="m_top_right"
  >
    <Link
      to="/profile/takkar"
    >
      takkar
    </Link>
    <span>
      iam
       
      _takkar
    </span>
  </div>
</div>
`;

exports[`Mon-TopInfo Component should match snapshot with basedOnMutuals prop 1`] = `
<div
  className="m_top"
>
  <img
    src="/users/24/avatar.jpg"
  />
  <div
    className="m_top_right"
  >
    <Link
      to="/profile/takkar"
    >
      takkar
    </Link>
    <span>
      3 mutual followers
    </span>
  </div>
</div>
`;
